--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.12",
+    "mongoose": "^8.4.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +22,7 @@
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
