--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.12",
@@ -18,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.12.2"
   },
