--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "firebase": "^10.12.3",
     "framer-motion": "^11.2.12",
     "mongoose": "^8.4.5",
     "next": "14.2.4",
